package com.liyi.design.pattern.structure.adapter.classadapter;

public class Voltage220V {

    public int output220V(){
        return 220;
    }
}
