package com.liyi.design.pattern.structure.adapter.classadapter;

public interface Voltage5V {

    int output5v();
}
